--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
-<title>Page Title</title>
+  <meta charset="UTF-8">
+  <title>232861</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h2 style="color:#2554C7;">Meie pere kassid</h2>
+<h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames </h5>
 <p>This is a paragraph.</p>
 
 </body>
