--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<h2 style="color:#2554C7;">Meie pere kassid</h2>
-<h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames </h5>
-<p>This is a paragraph.</p>
+<h1 style="color:#2554C7;">Meie pere kassid</h1>
+<h2 style="color:aquamarine;">232861</h2>
+<h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
+
 
 </body>
 </html>
