--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 <body>
 
 <h1 style="color:#2554C7;">Meie pere kassid</h1>
-<h2 style="color:aquamarine;">232861</h2>
+<h2 style="color:#2B60DE;">232861</h2>
 <h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
+<div class="row">
+  <div class="column">
+    <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="https://drive.google.com/uc?export=view&id=1CP_zUpm5pwV7J3HTxTwGfZ9E4aiNs3CO" alt="Lumi" style="width=100%">
+  </div>
+</div>
 
 </body>
 </html>
