--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://drive.google.com/uc?export=view&id=1CP_zUpm5pwV7J3HTxTwGfZ9E4aiNs3CO" alt="Lumi" style="width=100%">
+    <img src="https://drive.google.com/uc?export=view&id=1CP" alt="Lumi" style="width=100%">
   </div>
 </div>
 
