--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <div class="row">
   <div class="column">
-    <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" width="400" height="500">
+    <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:300px;">
   </div>
   <div class="column">
-    <img src="https://drive.google.com/uc?export=view&id=1CP" alt="Lumi" width="400" height="500">
+    <img src="https://drive.google.com/uc?export=view&id=1CP" alt="Lumi" style="width:400px;height:300px;">
   </div>
 </div>
 
