--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
 </head>
 <body>
 
-<h1 style="color:#2554C7;">Meie pere kassid</h1>
+<h1 style="color:#2554C7;">Meie kass</h1>
 <h2 style="color:#2B60DE;">232861</h2>
 <h5 style="color:#4169E1;">Midagi väga tõsist  siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
 <div class="row">
   <div class="column">
     <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:400px;">
-  </div>
-  <div class="column">
-    <img src="https://drive.google.com/uc?export=view&id=1CP" alt="Lumi" style="width:400px;height:300px;">
   </div>
 </div>
 
