--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <h2 style="color:#2B60DE;">232861</h2>
 <h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
-<img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:400px;">
+<table>
+  <tr>
+    <th>Nimi</th>
+    <th>Vanus</th>
+    <th>Tähemärk</th>
+  </tr>
+  <tr>
+    <td>Miu-Miu</td>
+    <td>5 aastat</td>
+    <td>Kaksikud</td>
+  </tr>
+</table>
+
+<img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
   
 
 </body>
