--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2 style="color:#2B60DE;">232861</h2>
 <h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
-<table>
+<table border="1" cellspacing="0" cellpadding="0">
   <tr>
     <th>Nimi</th>
     <th>Vanus</th>
