--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>232861</title>
+<style>
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse
+  }
+  th, td {
+    padding-right: 15px
+  }
+</style>  
 </head>
 <body>
 
-<h1 style="color:#2554C7;">Meie kass</h1>
-<h2 style="color:#2B60DE;">232861</h2>
-<h5 style="color:#4169E1;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
+<h1 style="color:#504A4B;">Meie kass</h1>
+<h2 style="color:#454545;">232861</h2>
+<h5 style="color:#463E3F;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
-<table border="1" cellspacing="0" cellpadding="0">
+<table>
   <tr>
-    <th>Nimi</th>
-    <th>Vanus</th>
-    <th>Tähemärk</th>
+    <th style="color:#6D6968;">Nimi</th>
+    <th style="color:#726E6D;">Vanus</th>
+    <th style="color:#736F6E;">Tähemärk</th>
   </tr>
   <tr>
-    <td>Miu-Miu</td>
-    <td>5 aastat</td>
-    <td>Kaksikud</td>
+    <td style="color:#6D6968;">Miu-Miu</td>
+    <td style="color:#726E6D;">5 aastat</td>
+    <td style="color:#736F6E;">Kaksikud</td>
   </tr>
 </table>
 
