--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
     <th style="color:#6D6968;">Nimi</th>
     <th style="color:#726E6D;">Vanus</th>
     <th style="color:#736F6E;">Tähemärk</th>
+    <th style="color:#666362;">Lemmik mänguasi</th>
   </tr>
   <tr>
     <td style="color:#6D6968;">Miu-Miu</td>
-    <td style="color:#726E6D;">5 aastat</td>
+    <td style="color:#726E6D;">5</td>
     <td style="color:#736F6E;">Kaksikud</td>
+    <td style="color:#666362;">Suvaline nöör</td>
   </tr>
 </table>
 
 <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
-  
+<span>Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvalise nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas &#128517 </span>  
 
 </body>
 </html>
