--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h1 style="color:#504A4B;">Meie kass</h1>
+<h1 style="color:#504A4B;">Miu-Miu</h1>
 <h2 style="color:#454545;">232861</h2>
 <h5 style="color:#463E3F;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
@@ -34,8 +34,10 @@
   </tr>
 </table>
 
-<img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
-<span>Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvalise nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas &#128517 </span>  
+<p style="display:inline-block;">
+  <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
+  Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvalise nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas&#128540; 
+</p>
 
 </body>
 </html>
