--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
   th, td {
     padding-right: 15px
   }
+  img {
+    float: left
+  }
 </style>  
 </head>
 <body>
 
-<h1 style="color:#504A4B;">Miu-Miu</h1>
-<h2 style="color:#454545;">232861</h2>
-<h5 style="color:#463E3F;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
+  <h1 style="color:#504A4B;">Miu-Miu</h1>
+  <h2 style="color:#454545;">232861</h2>
+  <h5 style="color:#463E3F;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h5>
 
-<table>
-  <tr>
-    <th style="color:#6D6968;">Nimi</th>
-    <th style="color:#726E6D;">Vanus</th>
-    <th style="color:#736F6E;">Tähemärk</th>
-    <th style="color:#666362;">Lemmik mänguasi</th>
-  </tr>
-  <tr>
-    <td style="color:#6D6968;">Miu-Miu</td>
-    <td style="color:#726E6D;">5</td>
-    <td style="color:#736F6E;">Kaksikud</td>
-    <td style="color:#666362;">Suvaline nöör</td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <th style="color:#6D6968;">Nimi</th>
+      <th style="color:#726E6D;">Vanus</th>
+      <th style="color:#736F6E;">Tähemärk</th>
+      <th style="color:#666362;">Lemmik mänguasi</th>
+    </tr>
+    <tr>
+      <td style="color:#6D6968;">Miu-Miu</td>
+      <td style="color:#726E6D;">5</td>
+      <td style="color:#736F6E;">Kaksikud</td>
+      <td style="color:#666362;">Suvaline nöör</td>
+    </tr>
+  </table>
 
-<div style="display:inline-block;vertical-align:top;">
-  <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
-</div>
-<div style="display:inline-block;">
-  <p>Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvalise nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas&#128540;</p>
-</div>
-
-
+  <div class="image">
+    <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
+    <p>Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvalise nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas&#128540;</p>
+  </div>
+  
 </body>
 </html>
