--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   img {
     float: left
   }
+  body {
+  background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20210115/pngtree-pink-cute-cat-paw-background-image_530116.jpg");
+  }
 </style>  
 </head>
 <body>
