--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 <body>
 
   <h1 style="color:#504A4B;">Miu-Miu</h1>
-  <h2 style="color:#454545;">232861</h2>
-  <h3 style="color:#463E3F;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h3>
+  <h2 style="color:#504A4B;">232861</h2>
+  <h3 style="color:#504A4B;">Midagi väga tõsist siin pole, ainult serious cat business. Tehtud <a href="https://taltech.ee/">TalTech</a> aine "Sissejuhatus infotehnoloogiasse"raames. </h3>
 
   <table>
     <tr>
-      <th style="color:#6D6968;">Nimi</th>
-      <th style="color:#726E6D;">Vanus</th>
-      <th style="color:#736F6E;">Tähemärk</th>
-      <th style="color:#666362;">Lemmik mänguasi</th>
+      <th style="color:#413839;">Nimi</th>
+      <th style="color:#413839;">Vanus</th>
+      <th style="color:#413839;">Tähemärk</th>
+      <th style="color:#413839;">Lemmik mänguasi</th>
     </tr>
     <tr>
-      <td style="color:#6D6968;">Miu-Miu</td>
-      <td style="color:#726E6D;">5</td>
-      <td style="color:#736F6E;">Kaksikud</td>
-      <td style="color:#666362;">Suvaline nöör</td>
+      <td style="color:#413839;">Miu-Miu</td>
+      <td style="color:#413839;">5</td>
+      <td style="color:#413839;">Kaksikud</td>
+      <td style="color:#413839;">Suvaline nöör</td>
     </tr>
   </table>
 
