--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div class="image">
     <img src="https://drive.google.com/uc?export=view&id=1CYDPrYaAq0SPmci3eOL05MTlx40PXHZx" alt="Miu-Miu" style="width:400px;height:500px;">
-    <p>Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvalise nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas&#128540;</p>
+    <p>Siin on meie 5aastane Šoti tõugu kass Miu-Miu! Enne tema võtmist polnud ma väga kassiusku, kuid nüüd on teised lood🐈 Ta armastab üle kõige igasuguste suvaliste nööridega mängida, niiet spets kassi mänguasjade ostmine on suurim raiskamine meie majas&#128540;</p>
   </div>
   
 </body>
